--- a/share/templates/receive.html
+++ b/share/templates/receive.html
@@ -25,7 +25,7 @@
                {% if messages %}
                  <ul class=flashes>
                  {% for category, message in messages %}
-		 <li class="{{ category }}">{{ message }}</li>
+		               <li class="{{ category }}">{{ message }}</li>
                  {% endfor %}
                  </ul>
                {% endif %}
@@ -34,15 +34,18 @@
         </form>
 
         <!-- We are not using a <noscript> tag because it only works when the security slider
-             is set to Safest, not Safer. -->
+             is set to Safest, not Safer.
+
+             For more information about the upload issue:
+             https://github.com/micahflee/onionshare/issues/899
+        -->
         <div id="noscript">
           <p>
-            <strong>Warning:</strong> Due to a bug in Tor Browser and Firefox, if you
-            want to upload a file bigger than 50mb, you must set the Tor Browser
+            <strong>Warning:</strong> Due to a bug in Tor Browser and Firefox, uploads
+            sometimes never finish. To upload reliably, either set your Tor Browser
             <a rel="noreferrer" target="_blank" href="https://tb-manual.torproject.org/en-US/security-slider/">security slider</a>
-            to Standard. Otherwise your upload will never finish.</p>
-
-            <p>If you plan on only uploading small files, your current settings are fine.</p>
+            to Standard or
+            <a target="_blank" href="/noscript-xss-instructions">turn off your Tor Browser's NoScript XSS setting</a>.</p>
         </div>
       </div>
     </div>
